fix alignment 06

--- a/packages/bpk-component-breadcrumb/src/BpkBreadcrumbItem.module.scss
+++ b/packages/bpk-component-breadcrumb/src/BpkBreadcrumbItem.module.scss
@@ -24,6 +24,7 @@ $icon-height: 16px;
 
 .bpk-breadcrumb-item {
   display: flex;
+  margin-top: tokens.bpk-spacing-sm() / 4;
   align-items: center;
   white-space: nowrap;
 
@@ -32,7 +33,6 @@ $icon-height: 16px;
   }
 
   &__active-item {
-    margin-top: tokens.bpk-spacing-sm() / 2;
     color: tokens.$bpk-text-secondary-day;
   }
 
